# my-portfolio

app/: layout.tsx  page.tsx
app/About/: page.tsx
app/Contact/: page.tsx
app/Services/: page.tsx
app/api/chat/: route.ts
app/backend/: Dockerfile  main.py  pyproject.toml  rag.py  requirements.txt
app/components/: ChatWidget.tsx
